[project]
name = "worker-vllm"
dynamic = ["version"]
description = "RunPod serverless worker for OpenAI-compatible vLLM inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ray",
    "pandas",
    "pyarrow",
    "runpod~=1.8.1",
    "huggingface-hub",
    "packaging",
    "typing-extensions>=4.8.0",
    "pydantic>=2.12.0",
    "pydantic-settings",
    "python-dotenv>=1.2.2",
    "hf-transfer",
    "transformers>=4.57.0,<5",
    "bitsandbytes>=0.45.0",
    "kernels",
    "torch-c-dlpack-ext",
]

[tool.uv]
package = false
