[project]
name = "worker-vllm"
dynamic = ["version"]
description = "RunPod serverless worker for OpenAI-compatible vLLM inference"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ray",
    "pandas",
    "pyarrow",
    "runpod>=1.8.1,<2",
    "huggingface-hub",
    "packaging",
    "typing-extensions>=4.8.0",
    "pydantic>=2.12.0,<3",
    "pydantic-settings",
    "python-dotenv>=1.2.2,<2",
    "hf-transfer",
    "transformers>=4.57.0,<5",
    "bitsandbytes>=0.45.0",
    "kernels",
    "torch-c-dlpack-ext",
]

[[tool.uv.index]]
default-index = "pypi"
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch" }

[tool.uv]
package = false
